# disco-to-proto3-converter

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  CONTRIBUTING.md  Dockerfile  README.md  WORKSPACE  disco_to_proto3_converter.bzl  pom.xml  repositories.bzl  repository_rules.bzl
.github/: CODEOWNERS  sync-repo-settings.yaml
.github/workflows/: ci.yaml
google/cloud/compute/v1/: BUILD.bazel  compute.proto
google/cloud/compute/v1small/: BUILD.bazel
rules_gapic/: disco_to_proto.bzl
src/main/java/com/google/cloud/discotoproto3converter/: ConverterApp.java  DiscoToProto3ConverterApp.java  DiscoveryConverterApp.java  GapicYamlGeneratorApp.java  ServiceConfigGeneratorApp.java
src/main/java/com/google/cloud/discotoproto3converter/disco/: #Method.java#  CommonAcronyms.java  DiscoveryNode.java  Document.java  Inflector.java  Method.java  Name.java  Node.java  Schema.java
src/main/java/com/google/cloud/discotoproto3converter/gapic/: GapicYamlWriter.java
src/main/java/com/google/cloud/discotoproto3converter/proto3/: ConversionConfiguration.java  ConverterWriter.java  DocumentToProtoConverter.java  Field.java  GrpcMethod.java  GrpcService.java  Message.java  Option.java  Proto3Writer.java  ProtoElement.java  ProtoFile.java  ProtoFileMetadata.java  ProtoMerger.java  ProtoOptionValues.java  ProtoParser.java
src/main/java/com/google/cloud/discotoproto3converter/serviceconfig/: ServiceConfig.java  ServiceConfigWriter.java
src/test/java/com/google/cloud/discotoproto3converter/: ConversionConfigurationTest.java  ConverterAppTest.java  DiscoToProto3ConverterAppTest.java  GapicYamlGeneratorAppTest.java  ServiceConfigGeneratorAppTest.java
src/test/java/com/google/cloud/discotoproto3converter/disco/: MethodTest.java
src/test/resources/: compute.v1.json  compute.v1.reduced.json  compute.v1.small.json  compute.v1small.json
src/test/resources/google/cloud/compute/v1/: compute.proto.baseline  compute.proto.ignorelist  compute.v1.config.input.json  compute.v1.json  compute_grpc_service_config.json.baseline  compute_small_gapic.yaml  compute_strings.proto.baseline
src/test/resources/google/cloud/compute/v1small/: compute-versioned-two-services.proto.baseline  compute-versioned.proto.baseline  compute.any-format.proto.baseline  compute.error-any.proto.baseline  compute.ignorelist.proto.baseline  compute.merge.proto.baseline  compute.proto  compute.proto.baseline  compute.request-message-name-conflict.proto.baseline  compute.strings.proto.baseline  compute.subresource.proto.baseline  compute.v1small-versioned-inconsistent-empty.json  compute.v1small-versioned-inconsistent.json  compute.v1small-versioned-two-services.json  compute.v1small-versioned.json  compute.v1small.any-format.json  compute.v1small.collision-1.proto.baseline  compute.v1small.collision.message-1.service-1.json  compute.v1small.collision.message-1.service-1.proto.baseline  compute.v1small.collision.message-1.service-2.json  compute.v1small.collision.message-2.service-1.json  compute.v1small.config.baseline.proto  compute.v1small.config.in.json  compute.v1small.config.out.baseline.json  compute.v1small.error-any.json  compute.v1small.json  compute.v1small.nonerror-any.json  compute.v1small.request-message-name-conflict-unrecoverable.json  compute.v1small.request-message-name-conflict.json  compute.v1small.subresource.json
