load(
    "//:disco_to_proto3_converter.bzl",
    "google_java_format",
    "google_java_format_verification",
    "java_tests",
)

load(
    "@bazel_tools//tools/jdk:default_java_toolchain.bzl",
    "JDK9_JVM_OPTS",
    "BASE_JDK9_JVM_OPTS",
    "default_java_toolchain",
)

default_java_toolchain(
    name = "error_prone_warnings_toolchain_java17",
    java_runtime = "@bazel_tools//tools/jdk:remotejdk_17",
    jvm_opts = BASE_JDK9_JVM_OPTS,
    # package_configuration = [
    #     ":error_prone",
    # ],
    source_version = "17",
    target_version = "17",
    visibility = ["//visibility:public"],
)

_JAVA_COPTS = [
    "-source",
    "17",
    "-target",
    "17",
]

_COMPILE_DEPS = [
    "@com_google_guava_guava//jar",
    "@com_google_code_gson_gson//jar",
    "@javax_annotation_javax_annotation_api//jar",
    "@com_google_code_findbugs_jsr305//jar",
    "@com_fasterxml_jackson_core_jackson_annotations//jar",
    "@com_fasterxml_jackson_core_jackson_core//jar",
    "@com_fasterxml_jackson_core_jackson_databind//jar",
    "@com_google_auto_value_auto_value_annotations//jar",
]

_TEST_COMPILE_DEPS = [
    "@junit_junit//jar",
]

java_binary(
    name = "disco_to_proto3_converter",
    srcs = glob(["src/main/java/**/*.java"]),
    create_executable = True,
    javacopts = _JAVA_COPTS,
    jvm_flags = ["-Xmx512m"],
    main_class = "com.google.cloud.discotoproto3converter.DiscoToProto3ConverterApp",
    plugins = ["//:auto_value_plugin"],
    resources = [],
    visibility = ["//visibility:public"],
    deps = _COMPILE_DEPS,
)

java_binary(
    name = "service_config_generator",
    srcs = glob(["src/main/java/**/*.java"]),
    create_executable = True,
    javacopts = _JAVA_COPTS,
    jvm_flags = ["-Xmx512m"],
    main_class = "com.google.cloud.discotoproto3converter.ServiceConfigGeneratorApp",
    plugins = ["//:auto_value_plugin"],
    resources = [],
    visibility = ["//visibility:public"],
    deps = _COMPILE_DEPS,
)

java_binary(
    name = "gapic_yaml_generator",
    srcs = glob(["src/main/java/**/*.java"]),
    create_executable = True,
    javacopts = _JAVA_COPTS,
    jvm_flags = ["-Xmx512m"],
    main_class = "com.google.cloud.discotoproto3converter.GapicYamlGeneratorApp",
    plugins = ["//:auto_value_plugin"],
    resources = [],
    visibility = ["//visibility:public"],
    deps = _COMPILE_DEPS,
)

java_library(
    name = "disco_to_proto3_converter_testlib",
    srcs = glob(["src/test/java/**/*.java"]),
    javacopts = _JAVA_COPTS,
    plugins = ["//:auto_value_plugin"],
    visibility = ["//visibility:public"],
    deps = [":disco_to_proto3_converter"] + _COMPILE_DEPS + _TEST_COMPILE_DEPS,
)

java_tests(
    name = "disco_to_proto3_converter_tests",
    size = "small",
    srcs = glob(
        include = ["src/test/java/**/*Test.java"],
        exclude = ["src/test/java/**/Abstract*Test.java"],
    ),
    data = glob(["src/test/resources/**/*.*"]),
    runtime_deps = [":disco_to_proto3_converter_testlib"],
)

java_plugin(
    name = "auto_value_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    visibility = ["//visibility:public"],
    deps = ["@com_google_auto_value_auto_value//jar"],
)

google_java_format(
    name = "google_java_format",
    srcs = glob(["src/**/*.java"]),
    formatter = "//:google_java_format_binary",
)

# google-java-format
java_binary(
    name = "google_java_format_binary",
    jvm_flags = [
        # Not letting the formatter consume too much memory (essential for CI builds)
        "-Xmx512m",
        # ref: https://github.com/google/google-java-format?tab=readme-ov-file#as-a-library
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                 "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        # Useful when upgrading the version
        "-showversion"
    ],
    main_class = "com.google.googlejavaformat.java.Main",
    visibility = ["//visibility:public"],
    runtime_deps = ["@google_java_format_all_deps//jar"],
)

# Fails the build if any of the java files are not properly formatted according
# to the google-java-format tool.
google_java_format_verification(
    name = "google_java_format_verification",
    srcs = glob(["src/**/*.java"]),
    formatter = "//:google_java_format_binary",
)

exports_files(glob(["src/test/resources/**/*.json"]))
