# For the converter's Bazel rules testing and demonstration, specifically
# this file shows to to use the `proto_from_disco` build rule defined in this
# repository.
load(
    "//rules_gapic:disco_to_proto.bzl",
    "gapic_yaml_from_disco",
    "grpc_service_config_from_disco",
    "proto_from_disco",
)

_MESSAGE_IGNORE_LIST = [
    "HttpHealthCheck",
    "HttpsHealthCheck",
    "HttpHealthCheckList",
    "HttpsHealthCheckList",
    "GetHttpHealthCheckRequest",
    "GetHttpsHealthCheckRequest",
    "PatchHttpHealthCheckRequest",
    "PatchHttpsHealthCheckRequest",
    "UpdateHttpHealthCheckRequest",
    "UpdateHttpsHealthCheckRequest",
    "InsertHttpHealthCheckRequest",
    "InsertHttpsHealthCheckRequest",
    "ListHttpHealthChecksRequest",
    "ListHttpsHealthChecksRequest",
    "DeleteHttpHealthCheckRequest",
    "DeleteHttpsHealthCheckRequest",
]

_SERVICE_IGNORE_LIST = [
    "HttpHealthChecks",
    "HttpsHealthChecks",
]

proto_from_disco(
    name = "compute",
    src = "//:src/test/resources/google/cloud/compute/v1/compute.v1.json",
    message_ignorelist = _MESSAGE_IGNORE_LIST,
    relative_link_prefix = "https://cloud.google.com",
    service_ignorelist = _SERVICE_IGNORE_LIST,
)

grpc_service_config_from_disco(
    name = "compute_grpc_service_config",
    src = "//:src/test/resources/google/cloud/compute/v1/compute.v1.json",
    message_ignorelist = _MESSAGE_IGNORE_LIST,
    service_ignorelist = _SERVICE_IGNORE_LIST,
)

gapic_yaml_from_disco(
    name = "compute_gapic",
    src = "//:src/test/resources/google/cloud/compute/v1/compute.v1.json",
    message_ignorelist = _MESSAGE_IGNORE_LIST,
    service_ignorelist = _SERVICE_IGNORE_LIST,
)
